<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Decrypt">

    <Button
        android:id="@+id/button2"
        android:layout_width="199dp"
        android:layout_height="101dp"
        android:layout_marginBottom="128dp"
        android:onClick="decrypt"
        android:text="@string/decrypt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="258dp"
        android:layout_height="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_secret_key"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="258dp"
        android:layout_height="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/decrypt_message"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="258dp"
        android:layout_height="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_init_vector"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

</androidx.constraintlayout.widget.ConstraintLayout>