<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EncryptedMessage">

    <TextView
        android:id="@+id/encrypted_message_label"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/encrypted_message"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secret_key_label"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/key_field"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrypted_message_text" />

    <TextView
        android:id="@+id/secret_key_text"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret_key_label" />

    <TextView
        android:id="@+id/encrypted_message_text"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:maxHeight="150dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrypted_message_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/init_vector_constraint_layout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret_key_text">

        <TextView
            android:id="@+id/init_vector_label"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:text="@string/init_vector_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/init_vector_text"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:maxHeight="150dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/init_vector_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>